--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="true" />
+
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
@@ -28,41 +29,39 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"
         tools:replace="android:allowBackup">
-        <activity android:name=".Activity.Custom_order_search_and_category_Activity"></activity>
-        <activity
-            android:name=".Activity.Splash_Activity"
+
+        <activity android:name=".Activity.Splash_Activity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="com.package.name.First_activity" />
-
+                <action android:name="com.package.name.First_activity"/>
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".Activity.Customize_Order"
+
+        <activity android:name=".Activity.Customize_Order"
             android:hardwareAccelerated="true"
+            android:screenOrientation="portrait"
+            />
+
+        <activity android:name=".Activity.Manage_Categories"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".Activity.Manage_Categories"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Activity.Varient_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Activity.Update_product_Activity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".Activity.Varient_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activity.Update_product_Activity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Scrolling_Activity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".Activity.Add_new_product_activity"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Activity.Manage_Exixsting_category_Activity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:hardwareAccelerated="true" />
+        <activity android:name=".Activity.Manage_Exixsting_category_Activity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".Helper_classess.Push_notification">
             <intent-filter>
@@ -78,71 +77,71 @@
 
         <activity
             android:name=".Activity.FullscreenActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fullscreen"
-            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme" />
 
         <meta-data
             android:name="com.google.android.gms.ads.AD_MANAGER_APP"
             android:value="true" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
             android:name=".Activity.Request_Activity"
             android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Slider_activity"
             android:hardwareAccelerated="true"
-            android:label="@string/title_activity_slider_activity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_slider_activity" />
         <activity
             android:name=".Activity.Order_to_bProsessed"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:hardwareAccelerated="true" />
         <activity
             android:name=".Activity.Seller_Order_History"
             android:hardwareAccelerated="true" />
         <activity
             android:name=".Activity.Wishlist_Activity"
             android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Address_Activivty"
             android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Policy_activity"
             android:label="@string/title_activity_address_"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Activity.Orders_History_Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Activity.Ordes_history"
-            android:screenOrientation="portrait" />
+        <activity android:name=".Activity.Orders_History_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activity.Ordes_history"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Seller_Dashboard_Activity"
             android:label="@string/title_activity_seller__portal__screen_"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.All_Sellers_Display_Activity"
             android:hardwareAccelerated="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name=".Activity.Forgot_password"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activity.Forgot_password"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Check_out__Activity"
             android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.LoginActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Logintheme" />
+            android:theme="@style/Logintheme"
+            android:screenOrientation="portrait"/>
         <!--
  <activity android:name=".Displaying_complete_product_details_Activity">
             <intent-filter>
@@ -156,29 +155,30 @@
             android:name=".Activity.ImageOpening_activity"
             android:hardwareAccelerated="true"
             android:largeHeap="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Activity.Search_Activity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activity.Search_Activity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Cart_Activity"
             android:hardwareAccelerated="true"
             android:largeHeap="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.MainActivity"
             android:hardwareAccelerated="true"
             android:largeHeap="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Displaying_complete_product_details_Activity"
             android:hardwareAccelerated="false"
             android:largeHeap="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activity.Sign_up_Activity"
             android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activity.SignupActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
