--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
             jcenter()
             maven { url 'https://jitpack.io' }
+            google()
         }
     }
     buildTypes {
@@ -80,6 +81,7 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'///           butter Knife
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'/////        butter Knife
+
 }
 apply plugin: 'com.google.gms.google-services'
