--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,6 +182,7 @@
         <activity
             android:name=".Activity.Sign_up_Activity"
             android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activity.SignupActivity"
