--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"
         tools:replace="android:allowBackup">
-        <activity android:name=".Activity.Offline_order"></activity>
+        <activity android:name=".Activity.UserProfileActivity"></activity>
+        <activity android:name=".Activity.Offline_order" />
         <activity
             android:name=".Activity.Splash_Activity"
             android:screenOrientation="portrait">
@@ -182,8 +183,8 @@
         <activity
             android:name=".Activity.Sign_up_Activity"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".Activity.SignupActivity"
             android:screenOrientation="portrait" />
