--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.compaq.b2b_application"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 27
         multiDexEnabled true
         versionCode 1
@@ -88,6 +88,8 @@ dependencies {
     implementation 'com.github.joielechong:countrycodepicker:2.3.3'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'com.github.ArmanSar:SwipeLayout:1.0.10'
 
 
 }
