--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,10 @@ dependencies {
     implementation 'com.github.ArmanSar:SwipeLayout:1.0.10'
 
 
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
 repositories {
