--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"
         tools:replace="android:allowBackup">
-        <activity android:name=".Activity.UserProfileActivity"></activity>
+        <activity android:name=".Activity.ProfileActivity"></activity>
+        <activity android:name=".Activity.GoogleSignIn" />
+        <activity android:name=".Activity.UserProfileActivity" />
         <activity android:name=".Activity.Offline_order" />
         <activity
             android:name=".Activity.Splash_Activity"
