--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 android {
+    dataBinding.enabled = true
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.compaq.b2b_application"
@@ -101,3 +102,4 @@ apply plugin: 'com.google.gms.google-services'
 repositories {
     mavenCentral()
 }
+
