--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,7 +187,8 @@
             android:name=".Activity.Sign_up_Activity"
             android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustResize"
+            />
         <activity
             android:name=".Activity.SignupActivity"
             android:screenOrientation="portrait" />
